Move pages to react

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/color.css" rel="stylesheet">
     <link href="assets/css/nice-select.css" rel="stylesheet">
+    <link href="assets/css/live-chat.css" rel="stylesheet">
+    <link href="assets/css/monthly.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
         </head>
@@ -45,6 +47,7 @@
     <script src="assets/js/jquery.paroller.min.js"></script>
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/product-filter.js"></script>
+    <script src="assets/js/monthly.js"></script>
 
     <!-- map script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-CE0deH3Jhj6GN4YvdCFZS7DpbXexzGU"></script>
@@ -52,7 +55,7 @@
     <script src="assets/js/map-helper.js"></script>
 
 
-      <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
       
   </body>
 </html>
