--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Docpro - HTML 5 Template Preview</title>
-    <title>Docpro - HTML 5 Template Preview</title>
+    <title>iDoktor</title>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
@@ -49,11 +48,6 @@
     <script src="/assets/js/jquery.nice-select.min.js"></script>
     <script src="/assets/js/product-filter.js"></script>
     <script src="/assets/js/monthly.js"></script>
-
-    <!-- map script -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-CE0deH3Jhj6GN4YvdCFZS7DpbXexzGU"></script>
-    <script src="/assets/js/gmaps.js"></script>
-    <script src="/assets/js/map-helper.js"></script>
 
     <script src="/assets/js/script.js"></script>
 </body>
